--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,6 +15,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="background-color:#020D14; width: 100vw; height: 100vh;"></div>
+    <div id="root" style="background-color:#020D14; max-width: 100vw; min-height: 100vh; overflow-x: hidden;"></div>
   </body>
 </html>
